--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.header-link {
+  @apply flex h-full items-center justify-center text-sm font-semibold text-white hover:text-black md:text-base;
+}
