--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* pretendard 웹폰트 적용 */
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Pretendard Variable", Pretendard, Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-link {
