--- a/src/components/Filtering/Datepicker.module.css
+++ b/src/components/Filtering/Datepicker.module.css
@@ -6,32 +6,41 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.header {
-  background-color: white;
-  color: black;
-  font-weight: bold;
-}
-
 /* 기본 날짜 스타일 */
 .default-day {
   text-align: center;
-  color: #374151;
   border-radius: 0.3rem;
   transition: background-color 0.3s;
 }
 
 .default-day:hover {
-  background-color: #fde68a; /* hover 시 연한 주황색 */
+  background-color: #bbd7fc;
 }
 
 /* 선택된 날짜 스타일 */
 .selected-day {
-  background-color: #ea580c; /* 주황색 */
-  color: white;
+  background-color: #62a3f9;
+  color: white !important;
   border-radius: 0.3rem;
 }
 
 .selected-day:hover {
-  background-color: #f97316 !important; /* hover 시 더 진한 주황색 */
+  background-color: #538bd4 !important;
   color: white;
+}
+
+/* 오늘 날짜 색상 변경 */
+.today {
+  color: #62a3f9;
+  font-weight: bold;
+}
+
+/* 현재 달이 아닌 날짜 (다른 달) 연하게 */
+.outside-month {
+  color: #9ca3af; /* Tailwind의 gray-500 */
+}
+
+/* 요일을 굵게 */
+.react-datepicker__day-name {
+  font-weight: 600;
 }
