fix:header관련 ui및 기능 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,7 @@ body {
 .header-link {
   @apply flex h-full items-center justify-center text-sm font-semibold text-white hover:text-black md:text-base;
 }
+
+.header-link.active {
+  @apply text-black;
+}
